--- a/web/WEB_INF/web.xml
+++ b/web/WEB_INF/web.xml
@@ -18,7 +18,7 @@
 
     <servlet-mapping>
         <servlet-name>HelloServlet</servlet-name>
-        <url-pattern>/hello</url-pattern>
+        <url-pattern>/Hello</url-pattern>
     </servlet-mapping>
 
 </web-app>     
