--- a/build.xml
+++ b/build.xml
@@ -44,7 +44,7 @@
   <target name="prepare" depends="clean"
           description="Create working dirs and copy static files to work dir">
     <mkdir  dir="${dist.home}"/>
-    <mkdir  dir="${work.home}/WEB-INF/classes"/>
+    <mkdir  dir="${work.home}/WEB_INF/classes"/>
     <!-- Copy static HTML and JSP files to work dir -->
     <copy todir="${work.home}">
       <fileset dir="${web.home}"/>
@@ -52,12 +52,12 @@
   </target>
 
   <target name="compile" depends="prepare"
-          description="Compile Java sources and copy to WEB-INF/classes dir">
+          description="Compile Java sources and copy to WEB_INF/classes dir">
     <javac srcdir="${src.home}"
           destdir="${work.home}/WEB_INF/classes">
         <classpath refid="compile.classpath"/>
     </javac>
-    <copy  todir="${work.home}/WEB-INF/classes">
+    <copy  todir="${work.home}/WEB_INF/classes">
       <fileset dir="${src.home}" excludes="**/*.java"/>
     </copy>
 
